--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "airtable": "^0.4.1",
     "axios": "^0.11.0",
     "babel-preset-stage-1": "^6.1.18",
     "jsonp": "^0.2.0",
